--- a/app/src/main/res/layout/list_msg_item.xml
+++ b/app/src/main/res/layout/list_msg_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:textColor="@color/text_color_content"
+        android:textColor="?colorOnSurface"
         android:textSize="@dimen/text_size_content"
         tools:text="@string/app_name" />
 </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
