--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,36 +1,21 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
-    <style name="AppThemeBase" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-        <!-- colorPrimary is used for the default action bar background -->
-        <item name="colorPrimary">@color/primary</item>
-        <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <!-- colorAccent is used as the default value for colorControlActivated
-         which is used to tint widgets -->
-        <item name="colorAccent">@color/accent</item>
-        <!-- You can also set colorControlNormal, colorControlActivated
-         colorControlHighlight & colorSwitchThumbNormal. -->
-        <item name="android:windowBackground">@color/background</item>
-        <item name="android:colorBackground">@color/background</item>
 
-        <item name="appBarLayoutStyle">@style/AppThemeOverlayAppbarLayoutStyle</item>
-        <item name="actionOverflowMenuStyle">@style/Widget.AppCompat.PopupMenu.Overflow</item>
-        <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout.PrimarySurface</item>
-        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+    <style name="AppTheme" parent="HacgAppTheme">
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="statusBarBackground">@android:color/transparent</item>
     </style>
-
-    <style name="AppTheme" parent="AppThemeBase" />
 
     <style name="AppThemeTranslucent" parent="AppTheme">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:navigationBarDividerColor" tools:ignore="NewApi">@null</item>
+        <item name="android:enforceNavigationBarContrast" tools:ignore="NewApi">false</item>
         <!--<item name="android:windowAnimationStyle">@style/DIY.Animation.SlidingBack</item>-->
         <!--<item name="android:actionBarStyle">@style/DIYActionBar.Custom</item>-->
     </style>
 
-    <style name="AppThemeOverlayAppbarLayoutStyle" parent="Widget.MaterialComponents.AppBarLayout.Primary">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.MaterialComponents.Dark.ActionBar</item>
+    <style name="AppThemeOverlayAppbarLayoutStyle" parent="">
+
     </style>
 </resources>
